--- a/SpeechRecognition/Base.lproj/Main.storyboard
+++ b/SpeechRecognition/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--MainVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainVC" customModule="SpeechRecognition" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,135 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yrN-YH-tEY">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SPEECH RECOGNITION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qy-dc-gpX">
+                                        <rect key="frame" x="75.5" y="18" width="224.5" height="24"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.72340381149999999" green="0.1462985842" blue="0.13690983400000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="7qy-dc-gpX" firstAttribute="centerY" secondItem="yrN-YH-tEY" secondAttribute="centerY" id="7bF-XR-1Do"/>
+                                    <constraint firstItem="7qy-dc-gpX" firstAttribute="centerX" secondItem="yrN-YH-tEY" secondAttribute="centerX" id="RYH-PS-KtZ"/>
+                                    <constraint firstAttribute="height" constant="60" id="oNT-pk-cS1"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Press the button below to transcribe audio." textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="2Un-om-Jdc">
+                                <rect key="frame" x="16" y="80" width="343" height="412"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lf7-cQ-trV">
+                                <rect key="frame" x="37.5" y="597" width="300" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transcribe Recorded Audio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GIv-iV-N9T">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="50"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transcribe Live Audio" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5d6-Ky-ipy">
+                                        <rect key="frame" x="150" y="0.0" width="150" height="50"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="k3F-3t-k0o"/>
+                                    <constraint firstAttribute="height" constant="50" id="mHZ-fD-znY"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="5C8-PR-LyZ">
+                                <rect key="frame" x="87.5" y="517" width="200" height="60"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sy1-AT-XDj" customClass="CircleButton" customModule="SpeechRecognition" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                        <color key="backgroundColor" red="0.72340381149999999" green="0.1462985842" blue="0.13690983400000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="OVE-E9-qLB"/>
+                                            <constraint firstAttribute="height" constant="60" id="TxR-fU-mJG"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="30"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="redButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IYF-re-fGU"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4q-VK-iC3" customClass="CircleButton" customModule="SpeechRecognition" customModuleProvider="target">
+                                        <rect key="frame" x="140" y="0.0" width="60" height="60"/>
+                                        <color key="backgroundColor" red="0.40649002820000002" green="0.92430375649999996" blue="0.27671488799999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="iGh-fK-h1I"/>
+                                            <constraint firstAttribute="width" constant="60" id="rjl-Gk-tjR"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="30"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="greenButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aPI-hd-PrN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="OAQ-nO-Gke">
+                                <rect key="frame" x="87" y="517" width="200" height="60"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="TXe-gs-gQJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="1l0-zy-mSk"/>
+                                            <constraint firstAttribute="height" constant="60" id="d0g-63-8c7"/>
+                                        </constraints>
+                                    </activityIndicatorView>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="YlS-ZD-rf1">
+                                        <rect key="frame" x="140" y="0.0" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="0rP-iH-02U"/>
+                                            <constraint firstAttribute="width" constant="60" id="mTI-fe-6ej"/>
+                                        </constraints>
+                                    </activityIndicatorView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5C8-PR-LyZ" firstAttribute="centerX" secondItem="OAQ-nO-Gke" secondAttribute="centerX" id="0oY-ty-Ld5"/>
+                            <constraint firstItem="2Un-om-Jdc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="4X4-WP-Rzy"/>
+                            <constraint firstItem="lf7-cQ-trV" firstAttribute="top" secondItem="5C8-PR-LyZ" secondAttribute="bottom" constant="20" id="4Xo-le-nvZ"/>
+                            <constraint firstItem="lf7-cQ-trV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4mC-7o-6tU"/>
+                            <constraint firstItem="5C8-PR-LyZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IAq-eE-wHB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="2Un-om-Jdc" secondAttribute="trailing" id="JvE-6d-AH3"/>
+                            <constraint firstItem="yrN-YH-tEY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Q3f-xs-OsH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lf7-cQ-trV" secondAttribute="bottom" constant="20" id="Rdl-5g-VtK"/>
+                            <constraint firstItem="yrN-YH-tEY" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="VIA-dh-MOy"/>
+                            <constraint firstItem="5C8-PR-LyZ" firstAttribute="top" secondItem="2Un-om-Jdc" secondAttribute="bottom" constant="25" id="a5w-Se-aX7"/>
+                            <constraint firstAttribute="trailing" secondItem="yrN-YH-tEY" secondAttribute="trailing" id="eMO-as-SAr"/>
+                            <constraint firstItem="5C8-PR-LyZ" firstAttribute="centerY" secondItem="OAQ-nO-Gke" secondAttribute="centerY" id="gSe-OZ-GPb"/>
+                            <constraint firstItem="2Un-om-Jdc" firstAttribute="top" secondItem="yrN-YH-tEY" secondAttribute="bottom" constant="20" id="jdN-u8-VKf"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="greenActivityIndicator" destination="YlS-ZD-rf1" id="dmr-yI-p9w"/>
+                        <outlet property="redActivityIndicator" destination="TXe-gs-gQJ" id="okR-fN-zv3"/>
+                        <outlet property="transcribedText" destination="2Un-om-Jdc" id="iiB-dG-szQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
